add app-web methods, update some servises methods

--- a/app-web/src/main/resources/messages.properties
+++ b/app-web/src/main/resources/messages.properties
@@ -43,5 +43,7 @@ trips.before=Период: до
 button.trip.count="Рассчитать"
 trips.driverchoose=Выберите водителя
 drivers.available=Список доступных водителей:
+trips.available=Доступные рейсы
+
 
 
