add app-web (jsp)

--- a/app-web/src/main/resources/messages.properties
+++ b/app-web/src/main/resources/messages.properties
@@ -11,7 +11,7 @@ driver.id=ID водителя
 driver.name=Имя
 driver.age=Возраст
 driver.category=Категории
-driver.car=Автомобиль
+trips.car=Автомобиль
 driver.number=Номер автомобиля
 button.driver.add="Добавить водителя"
 drivers.list=Список водителей
@@ -44,6 +44,7 @@ button.trip.count="Рассчитать"
 trips.driverchoose=Выберите водителя
 drivers.available=Список доступных водителей:
 trips.available=Доступные рейсы
+trips.fuelrate=Расход топлива на 100 км
 
 
 
