add onepage site with rest, js, jQuery and ajax

--- a/app-web/src/main/resources/messages.properties
+++ b/app-web/src/main/resources/messages.properties
@@ -45,6 +45,7 @@ trips.driverchoose=Выберите водителя
 drivers.available=Список доступных водителей:
 trips.available=Доступные рейсы
 trips.fuelrate=Расход топлива на 100 км
-
+button.onepage.goto="Одностраничный сайт (jQuery+ajax)"
+button.jsp.goto="Многостраничный сайт (jsp)"
 
 
